samples/_failures_safe/1761077379_8dfdbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20e41f00.c: In function ‘main’:
./samples/SAFE/__tmp_20e41f00.c:133:12: error: missing terminating " character
  133 |     printf("Matrix Operations
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_20e41f00.c:133:5: error: expected expression at end of input
  133 |     printf("Matrix Operations
      |     ^~~~~~
./samples/SAFE/__tmp_20e41f00.c:133:5: error: expected declaration or statement at end of input
